Added user can create expenses feature. (#31)
