# app/serializers/expense_serializer.rb
@@ -1,0 +1,10 @@
+class ExpenseSerializer
+  include FastJsonapi::ObjectSerializer
+  attributes :title,
+             :description,
+             :amount_cents,
+             :amount_currency,
+             :user_id
+
+  belongs_to :expense_category
+end
